<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="3"
    android:paddingVertical="@dimen/_5sdp"
    >

    <TextView
        android:id="@+id/r_stat_money"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.7"
        android:text="@string/money"
        android:textAlignment="center"
        />
    <TextView
        android:id="@+id/r_stat_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/type"
        android:textAlignment="center"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/r_stat_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.3"
        android:text="@string/date"
        android:textAlignment="center"
        android:fontFamily="@font/flor"
        />

</LinearLayout>