<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PaymentsOptionsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payments_options"
        android:textSize="@dimen/_14sdp"
        android:textColor="@color/black"
        android:fontFamily="@font/lato"
        android:paddingHorizontal="@dimen/_5sdp"
        android:layout_marginVertical="@dimen/_10sdp"

        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="ltr"
        android:weightSum="5.04"
        tools:ignore="UselessParent"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@color/white"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/account_number"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:paddingVertical="@dimen/_5sdp"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.01"
            android:background="@color/gray"
            android:layout_marginHorizontal="@dimen/_1sdp"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/bank_name"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:paddingVertical="@dimen/_5sdp"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.01"
            android:background="@color/gray"
            android:layout_marginHorizontal="@dimen/_1sdp"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/logo"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:paddingVertical="@dimen/_5sdp"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.01"
            android:background="@color/gray"
            android:layout_marginHorizontal="@dimen/_1sdp"
            />


        <TextView

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/country"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:paddingVertical="@dimen/_5sdp"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.01"
            android:background="@color/gray"
            android:layout_marginHorizontal="@dimen/_1sdp"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/currency"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:paddingVertical="@dimen/_5sdp"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"/>

    <androidx.recyclerview.widget.RecyclerView
        android:background="@color/white"
        android:layout_marginTop="@dimen/_3sdp"
        android:id="@+id/recycler_paymentOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="false"/>


        <EditText
            android:id="@+id/payment_edit"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_stroke_edite"
            android:hint="@string/payment_number"
            android:padding="@dimen/_10sdp"
            android:imeOptions="flagNoExtractUi"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:textSize="@dimen/_10sdp"
            android:inputType="textNoSuggestions"
            />

        <Spinner
            android:layout_marginTop="@dimen/_10sdp"
            android:id="@+id/payment_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back_spinner"
            android:textSize="@dimen/_5sdp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_5sdp"
            />

        <Button
            android:id="@+id/payment_confirm"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:background="@drawable/rectangle1"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_20sdp"
            android:paddingHorizontal="@dimen/_20sdp"
            android:textAllCaps="false"/>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>