<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StatementActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        >



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:paddingVertical="@dimen/_5sdp"
        >

        <TextView

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:text="@string/money"
            android:textAlignment="center"
            android:fontFamily="@font/lato"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/type"
            android:textAlignment="center"
            android:fontFamily="@font/lato"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:text="@string/date"
            android:textAlignment="center"
            android:fontFamily="@font/lato"
            />

    </LinearLayout>

        <View
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/gray"/>

        <ProgressBar
            android:id="@+id/statement_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>

        <TextView
            android:id="@+id/statement_noData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/no_data"
            android:fontFamily="@font/flor"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="@dimen/_5sdp"
        android:id="@+id/recycler_statement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="false"
        />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>