<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="@dimen/_20sdp"
    >

    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rectangle_stroke_transparent"
        android:layout_gravity="center"
        android:paddingVertical="@dimen/_5sdp"
        >
        <ImageView
            android:id="@+id/group_my_join"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/join"
            android:layout_gravity="center"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/group_my_image"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/group_my_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/group_showrecive_btn"
            android:paddingHorizontal="@dimen/_5sdp"
            android:textColor="@color/white"
            android:text="@string/i_receive"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_25sdp"
            android:layout_gravity="center"
            android:background="@drawable/rectangle1"
            android:backgroundTint="@color/green"
            android:textAllCaps="false"
            />

        <Button
            android:id="@+id/group_remove_btn"
            android:paddingHorizontal="@dimen/_5sdp"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_25sdp"
            android:layout_gravity="center"
            android:background="@drawable/rectangle1"
            android:backgroundTint="@color/colorAccent"
            android:layout_marginVertical="@dimen/_3sdp"
            android:textAllCaps="false"
            />
        <Button
            android:id="@+id/group_showimage_btn"
            android:paddingHorizontal="@dimen/_5sdp"
            android:textColor="@color/white"
            android:text="@string/show_receive_image"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_25sdp"
            android:layout_gravity="center"
            android:background="@drawable/rectangle1"
            android:backgroundTint="@color/colorPrimary"
            android:textAllCaps="false"
            />


    </LinearLayout>

</RelativeLayout>