<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WorkWithActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="ltr"
            android:weightSum="3"
            >

            <TextView
                android:text="@string/image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:textColor="@color/black"
                android:textAlignment="center"
                />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.8"
                android:text="@string/name"
                android:layout_gravity="center"
                android:textAlignment="center"
                tools:ignore="RtlCompat"
                android:textColor="@color/black"
                />


        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="@dimen/_3sdp"
            android:id="@+id/recycler_work_my"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="ltr"
            android:weightSum="3"
            >

            <TextView
                android:text="@string/image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:textColor="@color/black"
                android:textAlignment="center"
                />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.8"
                android:text="@string/my_coworker"
                android:layout_gravity="center"
                android:textAlignment="center"
                tools:ignore="RtlCompat"
                android:textColor="@color/black"
                />


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="@dimen/_3sdp"
            android:id="@+id/recycler_work_friend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />


    </LinearLayout>

</androidx.core.widget.NestedScrollView>